Changes to file; reuploading

--- a/Starter_Code/Crypto_Clustering.ipynb
+++ b/Starter_Code/Crypto_Clustering.ipynb
@@ -6277,7 +6277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -6386,9 +6386,9 @@
     "# Create the scatter plot with hvplot\n",
     "scaled_pca_data.hvplot.scatter(\n",
     "    x='PCA1',\n",
-    "    y='PCA2',  # Ensure this column exists, or replace '2' with the actual column name\n",
+    "    y='PCA2', \n",
     "    color='cluster',\n",
-    "    hover_cols=['coin_id']  # Confirm 'coin_id' exists in your DataFrame\n",
+    "    hover_cols=['coin_id']\n",
     ")"
    ]
   },
